--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "test": "jest --detectOpenHandles",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,10 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.4.2",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
