--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "jest --detectOpenHandles",
+    "test": "jest",
     "coverage": "jest --coverage"
   },
   "keywords": [],
