--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "run-server": "node dist/index.js",
     "start": "tsc && node dist/index.js",
     "test": "dropdb footballtest && createdb footballtest && psql footballtest < footballtest.psql && jest --runInBand --detectOpenHandles",
     "coverage": "jest --coverage"
@@ -18,7 +20,8 @@
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.10.1",
     "pg": "^8.3.3",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -27,7 +30,6 @@
     "@types/supertest": "^2.0.10",
     "jest": "^26.4.2",
     "supertest": "^5.0.0",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.1"
   }
 }
