--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "run-server": "node dist/index.js",
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
+    "compile-and-run": "tsc && node dist/index.js",
     "test": "dropdb footballtest && createdb footballtest && psql footballtest < footballtest.psql && jest --runInBand --detectOpenHandles",
     "coverage": "jest --coverage"
   },
