--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start-dev": "node dist/index.js",
-    "start": "node index.js",
-    "compile-and-run": "tsc && node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "test": "dropdb footballtest && createdb footballtest && psql footballtest < footballtest.psql && jest --runInBand --detectOpenHandles",
     "coverage": "jest --coverage"
   },
